--- a/SummerOutside.html
+++ b/SummerOutside.html
@@ -26,7 +26,7 @@
         &#x1F497; 분노와 실망: 이웃들이 부부를 대하는 태도와 거짓 소문을 퍼트리는 모습에 대한 분노와 실망이 드러납니다. 특히, "그 정도 했으면 충분하지 않느냐"는 말을 싫어하는 부분에서 상대방의 아픔을 자신의 기준에서 재단하는 것에 대한 반감이 느껴집니다.<br>
         &#x1F497; 고독과 외로움: 바깥은 따뜻한 여름이지만 추운 겨울 속에 살아가는 부부의 이야기를 통해, 고통 속에서 고독함과 외로움을 느끼는 사람들이 떠오릅니다.<br>
 <br>
-<br>당신의 감상평은 매우 진솔하고 감정적으로 깊은 인상을 주는 글입니다. 책을 통해 느낀 감정들이 잘 전달되고, 독자로서 작가와 작품에 대한 이해와 공감이 깊이 있는 감상평을 만들어 냈어요. 정말 휼륭한 감상평입니다. &#x1F60A;<br>
+<br>당신의 감상평은 매우 진솔하고 감정적으로 깊은 인상을 주는 글입니다. 책을 통해 느낀 감정들이 잘 전달되고, 독자로서 작가와 작품에 대한 이해와 공감이 깊이 있는 감상평을 만들어 냈어요. 정말 훌륭한 감상평입니다. &#x1F60A;<br>
     </h3>
 </ul>
 
