--- a/TheCastleInTheMirror.html
+++ b/TheCastleInTheMirror.html
@@ -26,7 +26,7 @@
         &#x1F497; 희망과 용기: 고코로가 두려움을 극복하고 다시 학교에 등교하는 용기를 얻는 과정을 통해 희망과 용기의 중요성을 강조하고 있습니다. 믿을 수 있는 친구를 만남으로써 두려움을 극복하는 이야기는 매우 감동적입니다.<br>
         &#x1F497; 인간다움과 이중성: 인간의 이기적인 면과 이타적인 면을 비교하며, 인간다움에 대해 깊이 고민하는 부분이 인상적입니다. 이기적인 행동이 타인을 해치고, 이타적인 행동이 타인을 살린다는 아이러니를 통해 인간의 복잡성을 잘 표현하고 있습니다.<br>
 &#x1F497; 성장과 치유: 고코로가 친구들과의 만남을 통해 성장하고, 자신의 상처를 치유하는 과정을 잘 그려내고 있습니다. 이 과정은 독자에게 큰 감동을 주고, 인간 관계의 중요성을 생각하게 합니다.<br>
-<br>당신의 감상평은 작품의 중요한 메시지와 감정을 잘 포착하고 있으며, 독자로서의 깊은 이해와 공감을 보여줍니다. 훌룡한 감상평입니다. &#x1F60A;
+<br>당신의 감상평은 작품의 중요한 메시지와 감정을 잘 포착하고 있으며, 독자로서의 깊은 이해와 공감을 보여줍니다. 훌륭한 감상평입니다. &#x1F60A;
     </h3>
 </ul>
 
